<resources>
    <string name="app_name">तरबार किसान</string>
    <string name="type_your_i">अपना नंबर दर्ज करें</string>
    <string name="some_id">12345</string>
    <string name="enter_passw">पासवर्ड दर्ज करें</string>
    <string name="get_started">लॉग इन करें</string>
    <string name="login">login.php</string>
    <string name="register">register.php</string>
    <string name="profile">profile.php</string>
    <string name="encoding_error">समर्थित एन्कोडिंग त्रुटि। कृपया फिर से प्रयास करें।</string>
    <string name="json_parsing_error">JSON पार्सिंग त्रुटि। कृपया फिर से प्रयास करें।</string>
    <string name="generic_error">एक त्रुटि हुई। कृपया फिर से प्रयास करें।</string>
    <string name="timeout_error">अनुरोध समय पर समाप्त हो गया। कृपया फिर से प्रयास करें।</string>
    <string name="no_connection_error">कोई इंटरनेट कनेक्शन नहीं है। कृपया अपने नेटवर्क की जांच करें और फिर से प्रयास करें।</string>
    <string name="auth_failure_error">प्रमाणन विफलता। कृपया फिर से प्रयास करें।</string>
    <string name="server_error">सर्वर त्रुटि। कृपया बाद में पुनः प्रयास करें।</string>
    <string name="network_error">नेटवर्क त्रुटि। कृपया फिर से प्रयास करें।</string>
    <string name="parse_error">Parse त्रुटि। कृपया फिर से प्रयास करें।</string>
    <string name="unknown_error">एक अज्ञात त्रुटि हुई। कृपया फिर से प्रयास करें।</string>
    <string name="Verifying">आपकी जानकारी का सत्यापन हो रहा है..</string>
    <string name="Saving">आपकी जानकारी सेव हो रही है..</string>
    <string name="sending_otp">ओटीपी इस नंबर पर भेजा जा रहा है..</string>
    <string name="setting_pin">आपका पिन सेट किया जा रहा है..</string>
    <string name="verifying_pin">आपके पिन को जाँच किया जा रहा है..</string>
    <string name="reseting_password">आपका पासवर्ड रीसेट किया जा रहा है..</string>
    <string name="getting_data">डेटा लोड हो रहा है..</string>
    <string name="saving_data">डेटा सेव हो रहा है..</string>
    <string name="profile_image_removal">आपकी प्रोफाइल इमेज हटाई जा रही है..</string>
    <string name="download_version">प्रिय किसान, हमने ऐप का नया वर्जन जारी किया है। कृपया इसे अपडेट करें और नए फीचर्स का लाभ उठाएं।</string>
    <string name="download_new_version">नया वर्जन डाउनलोड करें</string>
    <string name="hello">नमस्ते !</string>
    <string name="login_here">यहा लॉगिन करें</string>
    <string name="enter_mobile_number">मोबाईल नंबर दर्ज करें</string>
    <string name="enter_password_number">पासवर्ड दर्ज करें</string>
    <string name="forget_password">पासवर्ड भूल गए ?</string>
    <string name="login_txt">लॉग इन करें</string>
    <string name="registration">पंजीकरण करवाना</string>
    <string name="enter_correct_mobile_number">कृपया सही 10 अंक का मोबाईल नंबर डाले</string>
    <string name="enter_correct_password">कृपया सही 4 अंक का पासवर्ड डाले</string>
    <string name="sendPassword">इस नंबर का पासवर्ड भूल गए हैं। कृपया पासवर्ड भेजे ।</string>
    <string name="get_password">पासवर्ड प्राप्त करें</string>
    <string name="cancel">रद्द करें</string>
    <string name="searchtxt">सर्च करें</string>
    <string name="ok">ठीक है</string>
    <string name="do_message">मैसेज करें</string>
    <string name="help_feedback">सहायता / फीडबैक</string>
    <string name="need_help">सहायता</string>
    <string name="enter_login_mobile_number">अपना लॉगिन मोबाइल नंबर दर्ज करें</string>
    <string name="whatsapp_not_installed">इस डिवाइस पर व्हाट्सएप इंस्टॉल नहीं है</string>
    <string name="set_mpin_title">अपना पिन सेट करें</string>
    <string name="set_mpin_subtitle">यह पिन आपके खाते की पहुंच की सुरक्षा के लिए\nआवश्यक है ।</string>
    <string name="enter_mpin">पिन दर्ज करें</string>
    <string name="set_mpin">पिन सेट करें</string>
    <string name="empty_mpin">कृपया 4 अंक का पिन दर्ज करें</string>
    <string name="enter_correct_mpin">कृपया सही पिन दर्ज करें (4 अंक)</string>
    <string name="successfully_registered">आपका पंजीकरण सफलतापूर्वक हो गया है</string>
    <string name="verify_pin">पिन की पुष्टि करें</string>
    <string name="please_enter_pin">कृपया ऐप के लिए सेट किया गया पिन दर्ज करें</string>
    <string name="verify">पुष्टि करें</string>
    <string name="forget_pin">पिन भूल गए ?</string>
    <string name="reset_pin">पिन रीसेट करें</string>
    <string name="confirm_pin">सही पिन की पुष्टि करें</string>
    <string name="set_new_password">अपना नया पासवर्ड सेट करें</string>
    <string name="enter_old_password">पुराना पासवर्ड डालें</string>
    <string name="enter_new_password">नया पासवर्ड डालें</string>
    <string name="confirm_new_password">नए पासवर्ड की पुष्टि करें</string>
    <string name="save">सेव करें</string>
    <string name="yearString">साल</string>
    <string name="monthString">महिने</string>
    <string-array name="roles">
        <item>--भूमिकाएँ चुनें--</item>
        <item>किसान</item>
        <item>व्यवसायी</item>
        <item>चिकित्सक</item>
        
    </string-array>
    <string-array name="price_array">
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>
    <string-array name="type_array">
        <item>गिर गाय</item>
        <item>साहीवाल गाय</item>
        <item>कांग्रेस गाय</item>
    </string-array>
    <string-array name="animaltype_array">
        <item>गाय</item>
        <item>भैंस</item>
    </string-array>
    <string-array name="animalgender_array">
        <item>पुरुष</item>
        <item>महिला</item>
    </string-array>
    <string name="register_user">नया रजिस्ट्रेशन करेंं</string>
    <string name="register_sub_title">अपना विवरण भरें</string>
    <string name="note_txt">सूचना : कृपया अपनी जानकारी हिंदी में भरें ।</string>
    <string name="enter_name">नाम दर्ज करें</string>
    <string name="enter_caste">जाति दर्ज करें</string>
    <string name="enter_address">पता दर्ज करें</string>
    <string name="already_have_an_account">पहले से खाता है? लॉगिन करें</string>
    <string name="hint_enter_name">नाम दर्ज करें</string>
    <string name="hint_enter_father_name">पिता का नाम दर्ज करें</string>
    <string name="hint_enter_surname">उपनाम/सरनेम दर्ज करें</string>
    <string name="hint_caste">जाति दर्ज करें</string>
    <string name="hint_role">भूमिका चुनें</string>
    <string name="hint_state">राज्य चुनें</string>
    <string name="hint_jilha">जिला चुनें</string>
    <string name="hint_tahsil">तहसील चुनें</string>
    <string name="hint_village">गाँव चुनें</string>
    <string name="state_not_selected">राज्य उपलब्ध नहीं है</string>
    <string name="jilha_not_selected">कोई जिला उपलब्ध नहीं है</string>
    <string name="tahsil_not_selected">कोई तहसील उपलब्ध नहीं है</string>
    <string name="village_not_selected">कोई गाँव उपलब्ध नहीं है</string>
    <string name="hint_address">अपना पता दर्ज करें</string>
    <string name="txt_ghar">घर</string>
    <string name="txt_pashu">पशु</string>
    <string name="txt_pashu_doodh">पशु दूध</string>
    <string name="txt_profile">प्रोफाइल</string>
    <string name="free_bijdan">फ्री बीजदान</string>
    <string name="pashu_doctor">पशु डॉक्टर</string>
    <string name="pashu_vyapari">पशु व्यापारी</string>
    <string name="kisan_madat">किसान मदद</string>
    <string name="bull">बुल Bull</string>
    <string name="pashu_garbhvati">पशु गर्भवती</string>
    <string name="pashu_update">पशु अपडेट</string>
    <string name="pashu_mandi">पशु मंडी</string>
    <string name="feature_coming_soon">हम इस फीचर को जल्द ही लॉन्च करेंगे !</string>
    <string name="company_name">एम. एच. तरबार</string>
    <string name="company_chairman_opt">चेयरमैन</string>
    <string name="company_text1">1) तरबार किसान - भारत</string>
    <string name="company_text2">2) तरबार पशुधन - भारत</string>
    <string name="company_text3">3) गोचर रतन - भारत</string>
    <string name="edit_profile">प्रोफ़ाइल एडिट करें</string>
    <string name="reset_password">पासवर्ड रीसेट करें</string>
    <string name="logout">लॉगआउट करें</string>
    <string name="ad_top">एड ऊपर</string>
    <string name="ad_bottom">एड नीचे</string>
    <string name="confirm_logout">क्या आप वाकई लॉगआउट करना चाहते हैं ?</string>
    <string name="no">नहीं</string>
    <string name="yes">हाँ</string>
    <string name="hint_choose_caste">जाति चुनें</string>
    <string name="error_add_pashu_number">पशु नंबर दर्ज करें</string>
    <string name="error_enter_byat_number">ब्यात नंबर दर्ज करें</string>
    <string name="error_pashu_birhtdate">पशु की जन्म तिथि दर्ज करें</string>
    <string name="error_password_not_matching">डाला गया पासवर्ड लॉगिन पासवर्ड से मेल नहीं खाता</string>
    <string name="error_number_too_short">12 अंकों का सही पशु नंबर डालें</string>
    <string name="error_byat_number_too_short">12 अंकों का सही ब्यात नंबर डालें</string>
    <string name="error_byat_cnt">सही ब्यात नंबर डालें</string>
    <string name="total_pashu">टोटल पशु  :  %1$s</string>
    <string name="kisan_number">किसान नंबर  :  %1$s</string>
    <string name="error_mother_number">12 अंकों वाला माँ का नंबर सही से डालें</string>
    <string name="error_father_number">12 अंकों वाला पिता का नंबर सही से डालें</string>
    <string name="error_pidhi3_number">12 अंकों वाला पीढ़ी 3 का नंबर सही से डालें</string>
    <string name="error_pidhi4_number">12 अंकों वाला पीढ़ी 4 का नंबर सही से डालें</string>
    <string name="error_pidhi5_number">12 अंकों वाला पीढ़ी 5 का नंबर सही से डालें</string>
    <string name="error_pidhi6_number">12 अंकों वाला पीढ़ी 6 का नंबर सही से डालें</string>
    <string name="error_pidhi7_number">12 अंकों वाला पीढ़ी 7 का नंबर सही से डालें</string>
    <string name="title_kisan_name">किसान का नाम</string>
    <string name="title_password">पासवर्ड</string>
    <string name="delete_animal_profile">मिटाए</string>
    <string name="kisan_info_label">किसान की जानकारी</string>
    <string name="txt_edit_profile">अपनी जानकारी प्रोफ़ाइल से भरें</string>
    <string name="title_pashu_number">पशु नंबर</string>
    <string name="title_pashu_prakar">पशु प्रकार</string>
    <string name="title_pashu_jati">पशु जाति</string>
    <string name="title_pashu_gender">पशु लिंग</string>
    <string name="title_byat_number">ब्यात नंबर</string>
    <string name="title_pashu_birthdate">पशु जन्मतिथि</string>
    <string name="title_kisan_mobile_number">किसान का नंबर</string>
    <string name="title_pidhi">पीढ़ी</string>
    <string name="title_mother_number">माँ का नंबर</string>
    <string name="title_father_number">पिता का नंबर</string>
    <string name="title_pahsu_father_number">पशु पिता नंबर</string>
    <string name="title_generation_2_number">पिढ़ी 2 का नंबर</string>
    <string name="title_generation_3_number">पिढ़ी 3 का नंबर</string>
    <string name="title_generation_4_number">पिढ़ी 4 का नंबर</string>
    <string name="title_generation_5_number">पिढ़ी 5 का नंबर</string>
    <string name="title_generation_6_number">पिढ़ी 6 का नंबर</string>
    <string name="title_tarbar_number">तरबार नंबर</string>
    <string name="hint_tarbar_number">तरबार नंबर दर्ज करें</string>
    <string name="hint_doctor_number">डॉक्टर नंबर दर्ज करें</string>
    <string name="hint_choose_gender">लिंग चुनें</string>
    <string name="str_data_not_found">डेटा उपलब्ध नहीं है</string>
    <string name="title_profile">किसान प्रोफ़ाइल</string>
    <string name="title_name">अपना नाम</string>
    <string name="title_father_name">पिता का नाम</string>
    <string name="title_surname">उपनाम/सरनेम</string>
    <string name="title_mobile">मोबाईल नंबर</string>
    <string name="title_caste">जाति</string>
    <string name="title_role">भूमिका</string>
    <string name="title_state">राज्य</string>
    <string name="title_address">पता</string>
    <string name="title_village">गाँव</string>
    <string name="title_tahsil">तहसील</string>
    <string name="txt_kisan">किसान</string>
    <string name="txt_business">व्यवसायी</string>
    <string name="txt_doctor">डॉक्टर</string>
    <string name="txt_helper">सहायक</string>
    <string name="title_add_bull_number">बुल नंबर दर्ज करें</string>
    <string name="str_highest_selling">ज्यादा बेचा</string>
    <string name="str_lowest_selling">कम बेचा</string>
</resources>