<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/highestCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_highest_selling"/>

    <CheckBox
        android:id="@+id/lowestCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_lowest_selling"/>

    <TextView
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchtxt"
        android:padding="5dp"
        android:textColor="@color/delete_option_color"
        android:textStyle="bold"
        android:textSize="14sp"
        android:gravity="right" />

</LinearLayout>