<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/login_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_22" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:textSize="@dimen/txt_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_form">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="23dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/mobile_number_icon" />

            <EditText
                android:id="@+id/MobileNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgColor"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/txt_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_form">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/password_img" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgColor"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:hint="@string/enter_password_number"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/txt_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:visibility="visible"
                android:text="@string/forget_password"
                android:textStyle="bold"
                android:textColor="@color/LogoBlue"
                android:textSize="@dimen/txt_14" />
        </LinearLayout>

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/big_button"
            android:gravity="center"
            android:text="@string/login_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:background="@drawable/big_button"
            android:backgroundTint="@color/update_button_color"
            android:gravity="center"
            android:text="@string/register_user"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_14"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/needHelp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/wpimg"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:src="@drawable/whatsapp_icon" />

            <TextView
                android:id="@+id/needHelpNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/bgColor"
                android:gravity="center"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:text="@string/need_help"
                android:textColor="@color/black"
                style="bold"
                android:inputType="number"
                android:textSize="@dimen/txt_14" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
