<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/white">

<!--    Mobile Number-->

    <LinearLayout
        android:id="@+id/mobileLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_form">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/mobile_number_icon" />

        <EditText
            android:id="@+id/forgetPasswordNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor"
            android:gravity="center_vertical"
            android:paddingRight="10dp"
            android:hint="@string/enter_login_mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/txt_14" />
    </LinearLayout>

<!--    Password-->
    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_form">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/password_img" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor"
            android:gravity="center_vertical"
            android:paddingRight="10dp"
            android:hint="@string/enter_password_number"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/txt_14" />
    </LinearLayout>

<!--    PashuNumber-->
    <LinearLayout
        android:id="@+id/pashuNumber"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_form">

        <ImageView
            android:id="@+id/pashuImage"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/pashunum" />

        <EditText
            android:id="@+id/AnimalNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor"
            android:gravity="center_vertical"
            android:paddingRight="10dp"
            android:hint= "@string/error_add_pashu_number"
            android:inputType="number"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:maxLength="12"
            android:textSize="@dimen/txt_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bullNumberLyt"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_form">

        <ImageView
            android:id="@+id/bullImage"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/pashunum" />

        <EditText
            android:id="@+id/bullNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor"
            android:gravity="center_vertical"
            android:paddingRight="10dp"
            android:hint= "@string/title_add_bull_number"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:maxLength="50"
            android:textSize="@dimen/txt_14" />
    </LinearLayout>

<!--    Strings-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/txt_14"
            android:textColor="@color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/textGetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textSize="@dimen/txt_14"
            android:textColor="@color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/searchTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            android:textSize="@dimen/txt_14"
            android:text="@string/searchtxt"
            android:textColor="@color/black"
            android:gravity="center" />

    </LinearLayout>
</LinearLayout>
